--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fundo_gamebox"
-    android:backgroundTint="@color/"
     tools:context=".MainActivity">
 
     <EditText
@@ -29,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Entrar"
-        android:textColor="#0C0C0C"
+        android:textColor="@color/white"
         app:iconTint="#FF5722"
         app:layout_constraintEnd_toStartOf="@+id/btnCadastro"
         app:layout_constraintHorizontal_bias="0.5"
